add periods to the status texts.

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -29,11 +29,11 @@
         <div class="constraint">
           <h1 class="nomargin">
           {% if global_status == "ok" %}
-            All systems go
+            All systems go.
           {% elif global_status == "minor" %}
-            Minor service disruption
+            Minor service disruption.
           {% elif global_status == "major" %}
-            Major service disruption
+            Major service disruption.
           {% endif %}
           </h1>
         </div>
