--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -38,7 +38,7 @@
           </h1>
         </div>
       </div>
-      {% if global_info %}
+      {% if global_info != "" %}
       <div class="headerstatus">
         <div class="constraint">
           <h3 class="nomargin">{{global_info}}</h3>
