--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -13,9 +13,7 @@
         <div class="constraint">
           <h1 class="name"><a href="/">Fedora Infrastructure Status</a></h1>
           <ul>
-            <!-- <li><a href="https://fedoraproject.org/">Fedora</a></li>
-<li><a href="https://fedoraproject.org/wiki/Infrastructure">Infrastructure</a></li>
--->
+            <li><a href="irc://irc.freenode.net/fedora-admin">See #fedora-admin for more information.</a></li>
           </ul>
         </div>
       </div>
