--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -13,7 +13,7 @@
         <div class="constraint">
           <h1 class="name"><a href="/">Fedora Infrastructure Status</a></h1>
           <ul>
-            <li><a href="irc://irc.freenode.net/fedora-admin">See #fedora-admin for more information.</a></li>
+            <li><a href="irc://irc.freenode.net/fedora-admin">#fedora-admin on irc.freenode.net</a></li>
           </ul>
         </div>
       </div>
