--- a/wsgi/index.html
+++ b/wsgi/index.html
@@ -18,6 +18,7 @@
       <span class="right">{{ service }}</span>
     </div>
     <div class="pad">
+      <img src="static/status-{{ statuses[service].status }}.png" style="vertical-align: middle; margin-top: -4px;" />
       {{ statuses[service].message }}
     </div>
   </div>
