Change copyright to RH and add famfamfam for CC compliance.

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -49,10 +49,12 @@
 
     <div id="footer" class="constraint">
       <p class="left">
-        <span>&copy; 2012</span>
-        Ricky Elrod, Patrick Uiterwijk
+        &copy; 2012 Red Hat, Inc., Patrick Uiterwijk<br>
       </p>
-      <p class="right"><a href="http://git.fedorahosted.org/git/fedora-status">Open Source</a></p>
+      <p class="right">
+        Silk Icons by <a href="http://www.famfamfam.com/lab/icons/silk/">famfamfam</a><br />
+        <a href="http://git.fedorahosted.org/git/fedora-status">Open Source</a>
+      </p>
     </div>
   </body>
 </html>
