--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -6,6 +6,7 @@
     <style type="text/css">
       {% include 'style.css' %}
     </style>
+    <link rel="alternate" type="application/rss+xml" title="Changes feed" href="/changes.rss" />
   </head>
   <body>
     <div id="header">
