--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -7,6 +7,7 @@
       {% include 'style.css' %}
     </style>
     <link rel="alternate" type="application/rss+xml" title="Changes feed" href="/changes.rss" />
+     <meta http-equiv="refresh" content="5" />
   </head>
   <body>
     <div id="header">
