--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -8,6 +8,7 @@
     </style>
     <link rel="alternate" type="application/rss+xml" title="Changes feed" href="/changes.rss" />
      <meta http-equiv="refresh" content="5" />
+     <link rel="shortcut icon" href="/images/status-{{global_status}}.ico">
   </head>
   <body>
     <div id="header">
