Added Scheduled service status

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -22,6 +22,8 @@
       </div>
       <div class="headercontent {% if global_status == "good" %}
                                   all-okay
+                                {% elif global_status == "scheduled" %}
+                                  scheduled-incident
                                 {% elif global_status == "minor" %}
                                   minor-incident
                                 {% elif global_status == "major" %}
@@ -31,6 +33,8 @@
           <h1 class="nomargin">
           {% if global_status == "good" %}
             All systems go.
+          {% elif global_status == "scheduled" %}
+            There are scheduled downtimes in progress.
           {% elif global_status == "minor" %}
             Minor service disruption.
           {% elif global_status == "major" %}
