--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -23,7 +23,7 @@
       <div class="headercontent {% if global_status == "good" %}
                                   all-okay
                                 {% elif global_status == "scheduled" %}
-                                  minor-incident
+                                  scheduled-incident
                                 {% elif global_status == "minor" %}
                                   minor-incident
                                 {% elif global_status == "major" %}
