--- a/wsgi/template.html
+++ b/wsgi/template.html
@@ -22,7 +22,7 @@
       <span class="right">{{ service }}</span>
     </div>
     <div class="pad">
-      <img src="static/status-{{ statuses[service].status }}.png" alt="{{ statuses[service].status }}" style="vertical-align: middle; margin: -3px 5px 0 0;" />
+      <img src="/status-{{ statuses[service].status }}.png" alt="{{ statuses[service].status }}" style="vertical-align: middle; margin-top: -4px;" />
       {{ statuses[service].message }}
     </div>
   </div>
