--- a/wsgi/template.html
+++ b/wsgi/template.html
@@ -18,7 +18,7 @@
                                 {% else %} red 
                                 {% endif %} status {{ loop.cycle('status-left', 'status-right') }}">
     <div class="header">
-      <b><a href="{{statuses[service].url}}" class="servicelink">{{ statuses[service].name }}</a></b>
+      <b>{{ statuses[service].name }}</b>
       <span class="right">{{ service }}</span>
     </div>
     <div class="pad">
