--- a/wsgi/mobile.html
+++ b/wsgi/mobile.html
@@ -3,7 +3,7 @@
     <head>
         <style type="text/css">
             body {
-                url(/status-{{global_status}}.png) norepeat;
+                url('/status-{{global_status}}.png') norepeat;
                 background-size: 100%;
             }
         </style>
