--- a/wsgi/mobile.html
+++ b/wsgi/mobile.html
@@ -3,7 +3,7 @@
     <head>
         <style type="text/css">
             body {
-                background: url('/status-{{global_status}}.png') norepeat;
+                background: url('/status-{{global_status}}.png') no-repeat;
                 background-size: 100%;
             }
         </style>
