Add a link to the outages calendar.

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -16,6 +16,7 @@
         <div class="constraint">
           <h1 class="name"><a href="/">Fedora Infrastructure Status</a></h1>
           <ul>
+            <li><a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">Outages Calendar</a></li>
             <li><a href="irc://irc.freenode.net/fedora-admin">#fedora-admin on irc.freenode.net</a></li>
           </ul>
         </div>
