make year be up to date

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -47,7 +47,7 @@
 
     <div id="footer" class="constraint">
       <p class="left">
-        &copy; 2012-2013 Red Hat, Inc., Patrick Uiterwijk<br>
+        &copy; {{year}} Red Hat, Inc., Patrick Uiterwijk<br>
       </p>
       <p class="right">
         Silk Icons by <a href="http://www.famfamfam.com/lab/icons/silk/">famfamfam</a><br />
