Add note about manual updates remove my old takeout order

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -19,6 +19,7 @@
             <li><a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">Outages Calendar</a></li>
             <li><a href="irc://irc.freenode.net/fedora-admin">#fedora-admin on irc.freenode.net</a></li>
           </ul>
+          <h2>(This page is manually updated with known outages)</h2>
         </div>
       </div>
       <div class="headercontent {% if global_status == "good" %}
