--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -43,6 +43,7 @@
         <div class="pad">
           <ul>
             <li>All hosts updated</li>
+            <li>Firmware updates for some hosts</li>
           </ul>
         </div>
       </div>
@@ -54,9 +55,7 @@
         </div>
         <div class="pad">
           <ul>
-            <li>ARM boxes moving</li>
-            <li>PPC boxes moving</li>
-            <li>Releng boxes moving</li>
+            <li>Development and Build servers being moved</li>
           </ul>
         </div>
       </div>
