--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -31,6 +31,7 @@
      <div class="constraint">
        <h3 class="nomargin">During the week of 2017-12-04 - 2017-12-08, all Fedora Infrastructure servers get moved</h3>
        <p>This page gives information about when what boxes will be down, and when they are finished moving.</p>
+       <p>For every day, the work will start around 15:00 UTC (08:00 UTC-7) and 00:00 UTC (17:00 UTC-7)</p>
      </div>
     </div>
 
