--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -69,6 +69,7 @@
         <div class="pad">
           <ul>
             <li>Production boxes moving</li>
+            <li>QA/Community boxes moving</li>
           </ul>
         </div>
       </div>
@@ -80,7 +81,7 @@
         </div>
         <div class="pad">
           <ul>
-            <li>QA boxes movin</li>
+            <li>Fedora Infrastructure Cloud moving</li>
           </ul>
         </div>
       </div>
