--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -36,7 +36,7 @@
       </div>
       <div class="headerstatus">
         <div class="constraint">
-		<!-- <h2 class="nomargin">Please see <a href="/q4maint.html">here</a> for big maintenance at 2017-12-04 - 2017-12-08</h2> -->
+          <h2 class="nomargin">Please see <a href="/q4maint.html">here</a> for big maintenance at 2017-12-04 - 2017-12-08</h2>
         </div>
       </div>
       {% if global_info != "" %}
