--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -7,7 +7,7 @@
       {% include 'style.css' %}
     </style>
     <meta http-equiv="refresh" content="60" />
-    <link rel="shortcut icon" href="/status-{{global_status}}.ico">
+    <link rel="shortcut icon" href="/static/status-{{global_status}}.ico">
   </head>
   <body>
     <div id="header">
