--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="constraint">
-      <div class="content topmargin orange">
+      <div class="content topmargin green">
         <div class="header">
           <b>Monday</b>
           <span class="right">2017-12-04</span>
