--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="content topmargin orange">
+      <div class="content topmargin green">
         <div class="header">
           <b>Tuesday</b>
           <span class="right">2017-12-05</span>
