Thursday is now also production
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -81,6 +81,7 @@
         </div>
         <div class="pad">
           <ul>
+            <li>Production boxes moving</li>
             <li>Infrastructure Cloud moving</li>
           </ul>
         </div>
