--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div class="content topmargin orange">
+      <div class="content topmargin green">
         <div class="header">
           <b>Wednesday</b>
           <span class="right">2017-12-06</span>
@@ -74,7 +74,7 @@
         </div>
       </div>
 
-      <div class="content topmargin orange">
+      <div class="content topmargin green">
         <div class="header">
           <b>Thursday</b>
           <span class="right">2017-12-07</span>
