2017q4 maint is finished \o/
Signed-off-by: Patrick Uiterwijk <patrick@puiterwijk.org>

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -34,11 +34,11 @@
           <h1 class="nomargin">{{verbose_global_status}}</h1>
         </div>
       </div>
-      <div class="headerstatus">
+      <!--<div class="headerstatus">
         <div class="constraint">
           <h2 class="nomargin">Please see <a href="/q4maint.html">here</a> for big maintenance at 2017-12-04 - 2017-12-08</h2>
         </div>
-      </div>
+      </div> -->
       {% if global_info != "" %}
       <div class="headerstatus">
         <div class="constraint">
