--- a/wsgi/q4maint.html
+++ b/wsgi/q4maint.html
@@ -87,7 +87,7 @@
         </div>
       </div>
 
-      <div class="content topmargin orange">
+      <div class="content topmargin green">
         <div class="header">
           <b>Friday</b>
           <span class="right">2017-12-08</span>
