point to Fedocal for known outages

--- a/wsgi/template.html
+++ b/wsgi/template.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div class="constraint">
-  <p align="center">(This page is manually updated with known outages)</p>
+  <p align="center">(This page is manually updated with <a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">known outages<a>)</p>
   {% for service in statuses %}
   <div class="content topmargin {% if statuses[service].status == "good" %} green 
                                 {% elif statuses[service].status == "scheduled" %} orange 
