correct upstream url

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -56,7 +56,7 @@
       </p>
       <p class="right">
         Silk Icons by <a href="http://www.famfamfam.com/lab/icons/silk/">famfamfam</a><br />
-        <a href="http://git.fedorahosted.org/git/fedora-status">Open Source</a>
+        <a href="https://github.com/fedora-infra/statusfpo">Open Source</a>
       </p>
     </div>
   </body>
