This will update the CY2020 doc

--- a/wsgi/CY2020-inframove.html
+++ b/wsgi/CY2020-inframove.html
@@ -13,191 +13,17 @@
     <div id="header">
       <div class="navbar">
         <div class="constraint">
-          <h1 class="name"><a href="/">Fedora Infrastructure Status</a></h1>
+          <h1 class="name"><a href="/">Fedora CY2020-Move</a></h1>
           <ul>
-            <li><a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">Outages Calendar</a></li>
-            <li><a href="irc://irc.freenode.net/fedora-admin">#fedora-admin on irc.freenode.net</a></li>
-          </ul>
+            <li>This document is superceded by <a href="https://hackmd.io/vDwoayVLQ8yjyDk3PDvC8A?view">HackMD version of move outline</a></li>
+	  </ul>
+	  <ul>For other information:
+	    <ul>
+	      <li><a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">Outages Calendar</a></li>
+              <li><a href="irc://irc.freenode.net/fedora-admin">#fedora-admin on irc.freenode.net</a></li>
+            </ul>
+	  </ul>
         </div>
       </div>
-      <div class="headercontent minor-incident">
-        <div class="constraint">
-          <h1 class="nomargin">Infrastructure 2020 Datacentre Moves</h1>
-        </div>
-      </div>
-    </div>
-
-    <div class="headerstatus">
-     <div class="constraint">
-       <h3 class="nomargin">During the time frame of 2020-04-13 to 2020-07-01, all Fedora Infrastructure servers will be moved at different times.</h3>
-       <p>This page gives information about when what boxes will be down, and when they are finished moving.</p>
-       <p>During this time different sets of systems will be down or in a degraded mode for multiple weeks at a time.</p>
-     </div>
-    </div>
-
-    <div class="constraint">
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 1 (Communishift)</b>
-          <span class="right">2020-04-13</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Powering down of communishift</li>
-            <li>Powering down of select systems in production</li>
-	    <li>Packing of systems and shipping to NC Datacentre</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 2 (Communishift)</b>
-          <span class="right">2020-04-20</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Shipment arrives in RDU</li>
-	    <li>Shipment arrvies in IAD</li>
-	    <li>Racks are set up in RDU</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 3 (Communishift)</b>
-          <span class="right">2020-04-27</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Setup of Communishift systems in RDU</li>
-            <li>Begin work on Minimum Viable Fedora (MVF) in IAD</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 4 (IAD) </b>
-          <span class="right">2020-05-04</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Work on MVF continues</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 5 (IAD) </b>
-          <span class="right">2020-05-11</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Work on MVF continues</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 6 (IAD) </b>
-          <span class="right">2020-05-18</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Work on MVF continues</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 7 (IAD) </b>
-          <span class="right">2020-05-25</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Switch over to MVF from PHX datacentre</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 8 (PHX) </b>
-          <span class="right">2020-06-01</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>Teardown and packing of PHX datacentre</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 9 (PHX/IAD) </b>
-          <span class="right">2020-06-08</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>shipment of systems across country</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 10 (IAD) </b>
-          <span class="right">2020-06-15</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>add services to MVF to bring up to fully functional</li>
-          </ul>
-        </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 11 (IAD) </b>
-          <span class="right">2020-06-22</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>add services to MVF to bring up to fully functional</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 12 (IAD) </b>
-          <span class="right">2020-06-29</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>bring up staging</li>
-          </ul>
-        </div>
-      </div>
-      <div class="content topmargin yellow">
-        <div class="header">
-          <b>Week 13 (IAD) </b>
-          <span class="right">2020-07-06</span>
-        </div>
-        <div class="pad">
-          <ul>
-            <li>bring up staging</li>
-          </ul>
-        </div>
-      </div>
-      </div>
-
-    </div>
-
-    <div id="footer" class="constraint">
-      <p class="left">
-        &copy; {{year}} Red Hat, Inc., Stephen Smoogen (and Patrick Uiterwijk)<br>
-      </p>
-      <p class="right">
-        Silk Icons by <a href="http://www.famfamfam.com/lab/icons/silk/">famfamfam</a><br />
-        <a href="http://git.fedorahosted.org/git/fedora-status">Open Source</a>
-      </p>
-    </div>
   </body>
 </html>
