New service status for ['-']: scheduled, with message: Move to new datacentre

--- a/wsgi/CY2020-inframove.html
+++ b/wsgi/CY2020-inframove.html
@@ -15,7 +15,7 @@
         <div class="constraint">
           <h1 class="name"><a href="/">Fedora CY2020-Move</a></h1>
           <ul>
-            <li>This document is superceded by <a href="https://hackmd.io/vDwoayVLQ8yjyDk3PDvC8A?view">HackMD version of move outline</a></li>
+            <li>This document is superceded by <a href="https://hackmd.io/@fedorainfra2020/rJpsA4FLL">HackMD version of move outline</a></li>
 	  </ul>
 	  <ul>For other information:
 	    <ul>
