--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -36,7 +36,7 @@
       </div>
       <div class="headerstatus">
         <div class="constraint">
-          <h2 class="nomargin">Please see <a href="https://hackmd.io/vDwoayVLQ8yjyDk3PDvC8A?view">here</a> for big maintenance at 2020-04 - 2020-07</h2>
+          <h2 class="nomargin">Please see <a href="https://hackmd.io/@fedorainfra2020/rJpsA4FLL">here</a> for big maintenance at 2020-04 - 2020-07</h2>
         </div>
       </div> <!-- -->
       {% if global_info != "" %}
