Change some text to see how this works.

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -37,7 +37,7 @@
       <div class="headerstatus">
         <div class="constraint">
 	  <h2>Fedora Project Datacentre Move</h2>
-          <p class="nomargin">We are now operating from the new datacentre and capacity is limited. We will be updating which services are expected to operate in the coming days (2020-06-13) Please see <a href="https://hackmd.io/@fedorainfra2020/rJpsA4FLL">here</a> for big maintenance at 2020-04 - 2020-07</p>
+          <p class="nomargin">We are now operating from the new datacentre and are bringing back capacity as time allows. Those items known to be still down or limited are at <a href="https://fedoraproject.org/wiki/Infrastructure/2020-post-datacenter-move-known-issues">our wiki.</a></p>
         </div>
       </div> <!-- -->
       {% if global_info != "" %}
