--- a/wsgi/template.html
+++ b/wsgi/template.html
@@ -4,15 +4,13 @@
 {% block global_extra_info %}
 <div class="headerstatus">
   <div class="constraint">
-    <h3 class="nomargin">Our main datacenter (phx2) is currently experiencing connection issues.</h3>
   </div>
 </div>
 {% endblock %}
 
 {% block content %}
 <div class="constraint">
-  <p align="center">(This page is manually updated with <a href="https://apps.fedoraproject.org/calendar/list/infrastructure-outages/">known outages<a>.)<br />
-  You may also check <a href="https://nagios-external.fedoraproject.org/nagios/map.php?host=all">status of our Nagios monitoring</a>.</p>
+  <p align="center">This page is a manually updated emergency notification of known outages. If stuff is down but not shown, we probably don't know about it. Please open a ticket at <a href="https://pagure.io/fedora-infrastructure/issues">our ticket system</a> or check <a href="https://nagios-external.fedoraproject.org/nagios/map.php?host=all"> which has the status of our Nagios monitoring</a>.</p>
   {% for service in statuses %}
   <div class="content topmargin {% if statuses[service].status == "good" %} green 
                                 {% elif statuses[service].status == "scheduled" %} orange 
