New service status for ['retrace']: minor, with message: down due to colo move

--- a/wsgi/template.html
+++ b/wsgi/template.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 <div class="constraint">
-  <p align="center">This page is a manually updated emergency notification of known outages. If stuff is down but not shown, we probably don't know about it. Please open a ticket at <a href="https://pagure.io/fedora-infrastructure/issues">our ticket system</a> or check <a href="https://nagios-external.fedoraproject.org/nagios/map.php?host=all"> which has the status of our Nagios monitoring</a>.</p>
+  <p align="center">This page is a manually updated emergency notification of known outages. If stuff is down but not shown, we probably don't know about it. Please open a ticket at <a href="https://pagure.io/fedora-infrastructure/issues">our ticket system</a>.</p>
   {% for service in statuses %}
   <div class="content topmargin {% if statuses[service].status == "good" %} green 
                                 {% elif statuses[service].status == "scheduled" %} orange 
