New service status for ['retrace']: minor, with message: down due to colo move

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -36,6 +36,8 @@
       </div>
       <div class="headerstatus">
         <div class="constraint">
+         <h2>Fedora Project Datacentre Move</h2>
+          <p class="nomargin">We are now operating from the new datacentre and are bringing back capacity as time allows. The known issues are documented <a href="https://fedoraproject.org/wiki/Infrastructure/2020-post-datacenter-move-known-issues">here in our wiki.</a></p>
         </div>
       </div> <!-- -->
       {% if global_info != "" %}
