Comment out the global announcement section about the data center move
Signed-off-by: Pierre-Yves Chibon <pingou@pingoured.fr>

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -34,12 +34,14 @@
           <h1 class="nomargin">{{verbose_global_status}}</h1>
         </div>
       </div>
-      <div class="headerstatus">
+<!--      <div class="headerstatus">
         <div class="constraint">
          <h2>Fedora Project Datacentre Move</h2>
           <p class="nomargin">We are now operating from the new datacentre and are bringing back capacity as time allows. The known issues are documented <a href="https://fedoraproject.org/wiki/Infrastructure/2020-post-datacenter-move-known-issues">here in our wiki.</a></p>
         </div>
-      </div> <!-- -->
+      </div>
+-->
+
       {% if global_info != "" %}
       <div class="headerstatus">
         <div class="constraint">
