Globally announce the account system migration
Signed-off-by: Nils Philippsen <nils@redhat.com>

--- a/wsgi/global.html
+++ b/wsgi/global.html
@@ -34,6 +34,17 @@
           <h1 class="nomargin">{{verbose_global_status}}</h1>
         </div>
       </div>
+      <div class="headerstatus">
+        <div class="constraint">
+          <h2>Fedora Project Account System Migration</h2>
+          <p class="nomargin">
+            We are in the process of migrating to our new Account System. We strive to cause as
+            little interruption as possible, but service availability during this outage isn't
+            guaranteed. Find details about how this might affect you in the
+            <a href="https://lists.fedoraproject.org/archives/list/devel-announce@lists.fedoraproject.org/thread/JGVRX7CSXSDJ2MV5TJNYPCGVWWI5XSNB/">announcement on the mailing list</a>.
+          </p>
+        </div>
+      </div>
 <!--      <div class="headerstatus">
         <div class="constraint">
          <h2>Fedora Project Datacentre Move</h2>
